--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
 </div>
 
 
+<script>
+  if (/Chrome\/(\d+\.\d+.\d+.\d+)/.test(navigator.userAgent)){
+    // Let's log a warning if the sample is not supposed to execute on this
+    // version of Chrome.
+    if (50 > parseInt(RegExp.$1)) {
+      ChromeSamples.setStatus('Warning! Keep in mind this sample has been tested with Chrome ' + 50 + '.');
+    }
+  }
+</script>
+
+
 
 
   
