--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ href="https://developer.bluetooth.org/gatt/services/Pages/ServiceViewer.aspx?u=o
 Information Service</a> characteristics from a nearby Bluetooth Device. You may want to check out the <a href="device-information-characteristics-async-await.html">Device Information Characteristics (Async Await)</a> sample.</p>
 
 <button id="getchar" onClick="getDeviceChar">Get Bluetooth Device Information Characteristics</button>
-<br>
+<br><br>
 <input type="text" name="chars">
 <button id="sendchars" onClick="getDeviceChar">Send chars</button>
 
@@ -122,7 +122,7 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
 
 
     
-<script>function getDeviceChar() {
+<script>function onButtonClick() {
   log('Requesting any Bluetooth Device...');
   navigator.bluetooth.requestDevice(
     {filters: anyNamedDevice(), optionalServices: ['device_information']})
