--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
 }
 
 function sendChars(charvalue) {
-
+log('Sending characters ' + charvalue);
 }
 
 /* Utils */
