--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
 <br><br>
 
 <form method="post" name="chars" id="chars">
-	<input id="submit" type="submit" name="thesechars" value="Send" onclick="sendChars(); /">
+	<input id="submit" type="submit" name="submit" value="Send" onclick="sendChars(); /">
 </form>
 
 <script>
