--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
 <br><br>
 
 <form method="post" name="chars" id="chars">
-	<input id="submit" type="submit" name="submit" value="Send" onclick="sendChars(); /">
+	<input name="textbox1" type="text" />
+	<input id="submit" type="submit" name="submit" value="Send" onclick="sendChars(document.getElementById('textbox1').value); /">
 </form>
 
 <script>
