--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
           break;
 
         default: log('> Unknown Characteristic: ' + characteristic.uuid);
-		log(decoder.decode(characteristic.readValue()));
+		//log(decoder.decode(characteristic.readValue()));
 
       }
     });
