--- a/index.html
+++ b/index.html
@@ -142,9 +142,10 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
   .then(service => {
     log('Getting Device Information Characteristics...');
     //return service.getCharacteristics();
-	return service.getCharacteristics('00001525-1212-efde-1523-785feabcd123');
+	return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
   })
-  .then(characteristics => {
+  
+ /* .then(characteristics => {
     let queue = Promise.resolve();
     let decoder = new TextDecoder('utf-8');
     characteristics.forEach(characteristic => {
@@ -225,9 +226,10 @@ Information Service</a> characteristics from a nearby Bluetooth Device. You may 
       }
     });
     return queue;
-  })
-  		.then(characteristic => {
-		  // Writing 1 is the signal to reset energy expended.
+  }) 
+  */
+  .then(characteristic => {
+		  // Writing 1 is the signal to start measurement
 		  var setMeasOn = new Uint8Array([1]);
 		  return characteristic.writeValue(setMeasOn);
 		})
