--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 
-<p>This sample illustrates the use of the Web Bluetooth API to read <a
+<p>Web Bluetooth API to read <a
 target="_blank"
 href="https://developer.bluetooth.org/gatt/services/Pages/ServiceViewer.aspx?u=org.bluetooth.service.device_information.xml">Device
-Information Service</a> characteristics from a nearby Bluetooth Device. You may want to check out the <a href="device-information-characteristics-async-await.html">Device Information Characteristics (Async Await)</a> sample.</p>
+Information Service</a> characteristics from a Bluetooth Device. Check out the <a href="device-information-characteristics-async-await.html">Device Information Characteristics (Async Await)</a> sample.</p>
 
-<button id="getchar">Get Bluetooth Device Information Characteristics</button>
+<button id="getchar">Get BT Device Information Characteristics</button>
 <br><br>
 
 <form method="post" name="chars" id="chars">
