--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/NODE Information Sample</h1>
+    <h1>Web BT/NOOODE Information Sample</h1>
 
 	
 
@@ -140,10 +140,10 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
     //return server.getPrimaryService('device_information');
   })
   .then(service => {
-    log('Getting Device Information Characteristics...');
 	let setter = service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
 	let getter = service.getCharacteristic('00001524-1212-efde-1523-785feabcd123');
 	//return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
+    log('Got Device Information Characteristics...');
 	return setter;
   })
   
@@ -231,8 +231,8 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
   }) 
   */
  .then(
- 	characteristic => characteristic.startNotifications();
-	log('started!');
+ 	//characteristic => characteristic.startNotifications();
+	log('start noti!');
 	)	
  .then(characteristic => {
 	log('listen!');
