--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/NOODE Information Sample</h1>
+    <h1>Web BT/DUDE Information Sample</h1>
 
 	
 
@@ -229,12 +229,10 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
     });
     return queue;
   }) 
-  
-.then(characteristic => characteristic.startNotifications();
-log('start noti!'))	
-*/
+*/  
+.then(characteristic => characteristic.startNotifications())
+
 .then(characteristic => {
-	log('listen!');
 	characteristic.addEventListener('characteristicvaluechanged', handleCharacteristicValueChanged);
 	log('Notifications have been started.');
 	})
