--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/DUDE3 Information Sample</h1>
+    <h1>Web BT/DUDE11 Information Sample</h1>
 
 	
 
@@ -142,9 +142,10 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
   .then(service => {
 	let setter = service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
 	let getter = service.getCharacteristic('00001524-1212-efde-1523-785feabcd123');
+	let config = service.getCharacteristic('00002902-0000-1000-8000-00805f9b34fb');
 	//return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
     log('Got Device Information Characteristics...');
-	return setter;
+	return config;
   })
   
  /* .then(characteristics => {
@@ -230,7 +231,6 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
     return queue;
   }) 
 */
-.then(log('setter:' + characteristic.uuid))
 .then(characteristic => characteristic.startNotifications())
 
 .then(characteristic => {
