--- a/index.html
+++ b/index.html
@@ -255,6 +255,23 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
 function sendChars(charvalue) {
 	log('Sending characters: ' + charvalue);
 	
+	navigator.bluetooth.requestDevice({ filters: [{ name: 'APT_KM V29' }] })
+.then(device => {
+  // Set up event listener for when device gets disconnected.
+  device.addEventListener('gattserverdisconnected', onDisconnected);
+
+  // Attempts to connect to remote GATT Server.
+  return device.gatt.connect();
+})
+.then(server => { /* ... */ })
+.catch(error => { console.log(error); });
+
+function onDisconnected(event) {
+  let device = event.target;
+  console.log('Device ' + device.name + ' is disconnected.');
+}
+
+	
 }
 
 function handleCharacteristicValueChanged(event) {
