--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/DUDE22 Information Sample</h1>
+    <h1>Web BT/DUDE33 Information Sample</h1>
 
 	
 
@@ -260,18 +260,8 @@ function sendChars(charvalue) {
 	
 	navigator.bluetooth.requestDevice({ filters: [{ name: 'APT_KM V29' }] })
 .then(device => {
-  // Set up event listener for when device gets disconnected.
-  device.addEventListener('gattserverdisconnected', onDisconnected);
-
-  // Attempts to connect to remote GATT Server.
-  return device.gatt.connect();
+	device.gatt.disconnect();
 })
-.then(server => { /* ... */ })
-.catch(error => { console.log(error); });
-
-function onDisconnected(event) {
-  let device = event.target;
-  console.log('Device ' + device.name + ' is disconnected.');
 }
 
 	
