--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/DUDE44 Information Sample</h1>
+    <h1>Web BT/DUDE554 Information Sample</h1>
 
 	
 
@@ -126,11 +126,14 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
 
 
     
-<script>function onButtonClick() {
+<script>
+var bluetoothDevice;
+function onButtonClick() {
   log('Requesting any Bluetooth Device...');
   navigator.bluetooth.requestDevice(
     {filters: anyNamedDevice(), optionalServices: ['00001523-1212-efde-1523-785feabcd123']})
   .then(device => {
+	bluetoothDevice = device;
     log('Connecting to GATT Server...');
     return device.gatt.connect();
   })
@@ -257,11 +260,7 @@ Information Service</a> characteristics from a Bluetooth Device. Check out the <
 
 function sendChars(charvalue) {
 	//log('Sending characters: ' + charvalue);
-  navigator.bluetooth.requestDevice(
-    {filters: anyNamedDevice(), optionalServices: ['00001523-1212-efde-1523-785feabcd123']})
-  .then(device => {
-    log('dis-Connecting to GATT Server...');
-    return device.gatt.disconnect();
+  bluetoothDevice.gatt.disconnect();
   })
 }
 
