--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/DUDEz!! Information Sample</h1>
+    <h1>Web BT/DUDEzz!! Information Sample</h1>
 
 	
 
@@ -150,6 +150,7 @@ function onButtonClick() {
 	let setter = service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
 	let getter = service.getCharacteristic('00001524-1212-efde-1523-785feabcd123');
 	let config = service.getCharacteristic('00002902-0000-1000-8000-00805f9b34fb');
+	let yh = indi.getCharacteristic('2A05');
 	//return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
     log('Got Device Information Characteristics...');
 	return setter;
