--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/DUDEk!! Information Sample</h1>
+    <h1>Web BT/DUDEss!! Information Sample</h1>
 
 	
 
@@ -240,8 +240,8 @@ function onButtonClick() {
   }) 
 */
 
-/* NOTIFICATIONS ON
 .then(characteristic => characteristic.startNotifications())
+/* NOTIFICATIONS ON
 
 .then(characteristic => {
 	characteristic.addEventListener('characteristicvaluechanged', handleCharacteristicValueChanged);
