--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT/DUDEss!! Information Sample</h1>
+    <h1>Web BT/DUDEtte!! Information Sample</h1>
 
 	
 
@@ -153,7 +153,7 @@ function onButtonClick() {
 	let yh = service.getCharacteristic('2A05');
 	//return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
     log('Got Device Information Characteristics...');
-	return setter;
+	return yh;
   })
   
  /* .then(characteristics => {
