--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ function onButtonClick() {
 	//let yh = service.getCharacteristic('0x2A05');
 	//return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
     log('Got Device Information Characteristics...');
-	return getter;
+	return setter;
   })
   
  /* .then(characteristics => {
