--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h1>Web BT / Measurement Sample</h1>
+    <h2>WebBT / Measurement Node</h2>
 
 	
 
@@ -64,19 +64,19 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 
-<p>Web Bluetooth API to read <a
+<p>Using Web Bluetooth API to read <a
 target="_blank"
 href="https://developer.bluetooth.org/gatt/services/Pages/ServiceViewer.aspx?u=org.bluetooth.service.device_information.xml">Device
-Information Service</a> characteristics from a Bluetooth Device. Check out the <a href="device-information-characteristics-async-await.html">Device Information Characteristics (Async Await)</a> sample.</p>
+Information Service</a> characteristics from a BLE Device. See <a href="https://googlechrome.github.io/samples/web-bluetooth/index.html">more samples</a>.</p>
 
 <button id="getchar">Connect + Measure</button>
 <br><br>
 
-<form method="post" name="chars" id="chars">
+
 	<input name="textbox1" type="text" />
 	
 	<input name="buttonSend" onclick="sendChars(document.getElementsByName('textbox1')[0].value)" type="button" value="Disconnect" />
-</form>
+
 
 <script>
   var ChromeSamples = {
