--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h2>WebBT / Measurement Node test</h2>
+    <h2>WebBT / Measurement Node testing</h2>
 
 	
 
