--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h2>WebBT / Measurement Node Test2</h2>
+    <h2>WebBT / Measurement Node TestX</h2>
 
 	
 
@@ -138,110 +138,19 @@ function onButtonClick() {
   .then(device => {
 	bluetoothDevice = device;
     log('Connecting to GATT Server...');
-	//bluetoothDevice.addEventListener('gattserverdisconnected', onDisconnected);
     return device.gatt.connect();
   })
   .then(server => {
     log('Getting Device Information Service...');
-	//indi = server.getPrimaryService('0x1801');
 	return server.getPrimaryService('00001523-1212-efde-1523-785feabcd123');
-    //return server.getPrimaryService('device_information');
   })
   .then(service => {
 	setter = service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
 	getter = service.getCharacteristic('00001524-1212-efde-1523-785feabcd123');
-	//let config = service.getCharacteristic('00002902-0000-1000-8000-00805f9b34fb');
-	//let yh = service.getCharacteristic('0x2A05');
-	//return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
     log('Got Device Information Characteristics...');
 	return getter;
   })
   
- /* .then(characteristics => {
-    let queue = Promise.resolve();
-    let decoder = new TextDecoder('utf-8');
-    characteristics.forEach(characteristic => {
-      switch (characteristic.uuid) {
-
-        case BluetoothUUID.getCharacteristic('manufacturer_name_string'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> Manufacturer Name String: ' + decoder.decode(value));
-          });
-          break;
-
-        case BluetoothUUID.getCharacteristic('model_number_string'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> Model Number String: ' + decoder.decode(value));
-          });
-          break;
-
-        case BluetoothUUID.getCharacteristic('hardware_revision_string'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> Hardware Revision String: ' + decoder.decode(value));
-          });
-          break;
-
-        case BluetoothUUID.getCharacteristic('firmware_revision_string'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> Firmware Revision String: ' + decoder.decode(value));
-          });
-          break;
-
-        case BluetoothUUID.getCharacteristic('software_revision_string'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> Software Revision String: ' + decoder.decode(value));
-          });
-          break;
-
-        case BluetoothUUID.getCharacteristic('system_id'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> System ID: ');
-            log('  > Manufacturer Identifier: ' +
-                padHex(value.getUint8(4)) + padHex(value.getUint8(3)) +
-                padHex(value.getUint8(2)) + padHex(value.getUint8(1)) +
-                padHex(value.getUint8(0)));
-            log('  > Organizationally Unique Identifier: ' +
-                padHex(value.getUint8(7)) + padHex(value.getUint8(6)) +
-                padHex(value.getUint8(5)));
-          });
-          break;
-
-        case BluetoothUUID.getCharacteristic('ieee_11073-20601_regulatory_certification_data_list'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> IEEE 11073-20601 Regulatory Certification Data List: ' +
-                decoder.decode(value));
-          });
-          break;
-
-        case BluetoothUUID.getCharacteristic('pnp_id'):
-          queue = queue.then(_ => characteristic.readValue()).then(value => {
-            log('> PnP ID:');
-            log('  > Vendor ID Source: ' +
-                (value.getUint8(0) === 1 ? 'Bluetooth' : 'USB'));
-            if (value.getUint8(0) === 1) {
-              log('  > Vendor ID: ' +
-                  (value.getUint8(1) | value.getUint8(2) << 8));
-            } else {
-              log('  > Vendor ID: ' +
-                  getUsbVendorName(value.getUint8(1) | value.getUint8(2) << 8));
-            }
-            log('  > Product ID: ' +
-                (value.getUint8(3) | value.getUint8(4) << 8));
-            log('  > Product Version: ' +
-                (value.getUint8(5) | value.getUint8(6) << 8));
-          });
-          break;
-
-        default: log('> Unknown Characteristic: ' + characteristic.uuid);
-		//log(decoder.decode(characteristic.readValue()));
-
-      }
-    });
-    return queue;
-  }) 
-*/
-
-
 
 /* NOTIFICATIONS ON */
 .then(characteristic => characteristic.startNotifications())
@@ -249,12 +158,13 @@ function onButtonClick() {
 .then(characteristic => {
 	characteristic.addEventListener('characteristicvaluechanged', handleCharacteristicValueChanged);
 	log('Notifications have been started to Getter!');
+	turnMeasurementOn();
 	})
 /* NOTIFICATIONS ON */
   
-  
+  function turnMeasurementOn() {
  log('Change Characteristics to Setter...');
- setter.getCharacteristic('00001525-1212-efde-1523-785feabcd123')
+ return setter.getCharacteristic('00001525-1212-efde-1523-785feabcd123')
  .then(characteristic => {
 		  // Writing 1 is the signal to start measurement
 		  var setMeasOn = new Uint8Array([1]);
@@ -267,6 +177,7 @@ function onButtonClick() {
   .catch(error => {
     log('Error! ' + error);
   });
+  }
 }
 
 function sendChars(charvalue) {
