--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h2>WebBT / Measurement Node Test X</h2>
+    <h2>WebBT / Measurement Node Test XX</h2>
 
 	
 
@@ -213,7 +213,7 @@ function sendChars(charvalue) {
 
 function handleCharacteristicValueChanged(event) {
   var value = event.target.value;
-  console.log('Received value: ' + value);
+  log('Received value: ' + value);
   // TODO: Parse Heart Rate Measurement value.
   // See https://github.com/WebBluetoothCG/demos/blob/gh-pages/heart-rate-sensor/heartRateSensor.js
 }
