--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h2>WebBT / Measurement Node wsup</h2>
+    <h2>WebBT / Measurement Node wassup</h2>
 
 	
 
@@ -222,13 +222,17 @@ function handleCharacteristicValueChanged(event) {
 
   if (DataType = 1) { 	// Acceleration data
 		log('datatype: ' + DataType);		
+
 		let raw_data = (((value[3]&0xff)<<8) + (value[3-1]&0xff));
+		log('raw: ' + raw_data)
 		if (raw_data > 32767){
 			raw_data -= 65536;
 			}
-        let res = raw_data;
-		res = (9.81*(raw_data)/256.0);
+
+		let res = (9.81*(raw_data)/256.0);
 		log('x: ' + res)
+		
+		
   }else{						// Environment data
   
     log('datatype: ' + DataType);
